--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -100,9 +100,11 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    height: 40px;
-    padding: 24px 12px;
+    min-height: 40px;
+    padding: 12px;
     gap: 8px;
+    flex-wrap: wrap;
+    max-width: 100%;
 
     border-radius: $border-radius;
     border: 1px solid $grey;
