upgrade Event description, upgrade Request Card

--- a/front/src/Styles/components/Sections/ListTableStyles.scss
+++ b/front/src/Styles/components/Sections/ListTableStyles.scss
@@ -127,6 +127,10 @@
             }
 
         }
+
+        svg {
+            cursor: pointer;
+        }
     }
 
     .ant-table-thead th.sortable {
