--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -11,6 +11,7 @@
   height: 40px;
   border-radius: $border-radius;
   border-color: $grey;
+  width: 100%;
 
   :global {
     .ant-select-selector {
