--- a/front/src/Components/PlanButton/PlanButton.module.scss
+++ b/front/src/Components/PlanButton/PlanButton.module.scss
@@ -31,3 +31,61 @@
         border-color: #5C8DB9;
     }
 }
+
+.ant-btn-variant-outlined{
+    background-color: #F7F8FA;
+    color: white;
+
+    &:hover {
+        background-color: #5C8DB9;
+        color: #fff;
+        border-color: #5C8DB9;
+    }
+}
+
+
+@mixin primary-btn-plan {
+    @include text1;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px;
+    height: 40px;
+    position: relative;
+
+    border-radius: $border-radius;
+    border: none;
+    background-color: #5C8DB9;
+    transition: background 0.3s ease;
+
+    cursor: pointer;
+
+    &:hover {
+        background-blend-mode: multiply;
+    }
+
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(#D292004D, 0.3);
+        border-radius: inherit;
+        opacity: 0;
+        transition: all .5s;
+    }
+
+    &:hover {
+        background-color: #5C8DB9;
+        color: #fff;
+        border-color: #5C8DB9;
+    }
+    &:disabled {
+        background-color: $grey;
+        cursor: default;
+    }
+}
