--- a/front/src/Widgets/Sidebar/SidebarMenu.scss
+++ b/front/src/Widgets/Sidebar/SidebarMenu.scss
@@ -74,3 +74,9 @@
         }
     }
 }
+.SidebarSectionTitle .ant-tag {
+    font-weight: 500;
+    font-size: 12px;
+    padding: 0 6px;
+    border-radius: 4px;
+}
