--- a/front/src/Styles/components/Sections/ModalStyle.scss
+++ b/front/src/Styles/components/Sections/ModalStyle.scss
@@ -17,9 +17,21 @@
         align-items: center;
         gap: 8px;
 
+        &.event {
+          > div {
+            max-width: calc(100% - 120px);
+          }
+        }
+
         &.direction {
           > div {
             max-width: calc(100% - 115px);
+          }
+        }
+
+        &.project {
+          > div {
+            max-width: calc(100% - 65px);
           }
         }
 
@@ -31,7 +43,6 @@
 
         > div {
           height: 22px;
-          max-width: calc(100% - 65px);
         }
       }
     }
