--- a/front/src/Pages/Tasks/Tasks.scss
+++ b/front/src/Pages/Tasks/Tasks.scss
@@ -144,6 +144,11 @@
   }
 }
 
+.status-select {
+  border-width: 2px !important;
+  border-radius: 5px;
+}
+
 .Tasks-Table {
   .ant-table-wrapper {
     background: #fff;
