--- a/front/src/Components/CustomTable/TableStyles.module.scss
+++ b/front/src/Components/CustomTable/TableStyles.module.scss
@@ -1,4 +1,4 @@
-.TableWrapper {
+.Tasks-Table {
   .ant-table-wrapper {
     background: #fff;
     border-radius: 12px;
@@ -73,6 +73,8 @@
     > td {
       padding-top: 8px !important;
       padding-bottom: 8px !important;
+
     }
   }
 }
+
