--- a/front/src/Pages/Team/TeamMembersTable.scss
+++ b/front/src/Pages/Team/TeamMembersTable.scss
@@ -1,31 +1,4 @@
-.team-members-table {
-  margin-top: 16px;
-
-  .ant-table {
-    background-color: #fff;
-    border-radius: 8px;
-    overflow: hidden;
-
-    .ant-table-thead > tr > th {
-      background-color: #f5f5f5;
-      font-weight: 600;
-      text-align: center;
-    }
-
-    .ant-table-tbody > tr > td {
-      text-align: center;
-      padding: 12px;
-    }
-
-    .ant-btn-link {
-      padding: 0 4px;
-    }
-
-    .ant-form-item {
-      margin-bottom: 0;
-    }
-  }
-
+.Tasks-Table {
   .ant-table-wrapper {
     background: #fff;
     border-radius: 12px;
@@ -104,3 +77,4 @@
     }
   }
 }
+
