add edit directions and projects

--- a/front/src/Styles/components/Sections/ListTableStyles.scss
+++ b/front/src/Styles/components/Sections/ListTableStyles.scss
@@ -152,6 +152,7 @@
 
 .PaginationContainer {
     margin-top: 20px;
+    margin-bottom: 40px;
     display: flex;
     justify-content: flex-end;
 }
