--- a/front/src/Styles/_buttons.scss
+++ b/front/src/Styles/_buttons.scss
@@ -90,3 +90,47 @@
     cursor: default;
   }
 }
+
+@mixin secondary-btn {
+  @include text1;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+  height: 40px;
+  position: relative;
+
+  border-radius: $border-radius;
+  border: none;
+  transition: background 0.3s ease;
+
+  cursor: pointer;
+
+  &:hover {
+    background-blend-mode: multiply;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(#D292004D, 0.3);
+    border-radius: inherit; 
+    opacity: 0;
+    transition: all .5s;
+  }
+
+  &:hover:before {
+    opacity: 1;
+  }
+
+  &:disabled {
+    background-color: $grey;
+    cursor: default;
+  }
+}
