--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -110,7 +110,7 @@
     padding: 12px;
     gap: 8px;
     flex-wrap: wrap;
-    max-width: 100%;
+    width: 100%;
 
     border-radius: $border-radius;
     border: 1px solid $grey;
@@ -122,12 +122,16 @@
         display: flex;
         gap: 4px;
         align-items: center;
+        max-width: 100%;
+        word-break: break-all;
 
         border-radius: $border-radius;
         background-color: $blue;
 
         svg {
           cursor: pointer;
+          min-height: 16px;
+          min-width: 16px;
         }
     }
 
