--- a/front/src/Styles/components/Common/UniversalInputStyle.scss
+++ b/front/src/Styles/components/Common/UniversalInputStyle.scss
@@ -6,8 +6,8 @@
 
     .UniversalInput {
         @include text1;
-        width: 240px;
-        height: 32px;
+        width: 100%;
+        min-height: 32px;
         padding: 8px 12px;
 
         border-radius: $border-radius;
