--- a/front/src/Pages/Tasks/TaskCard/TaskCard.css
+++ b/front/src/Pages/Tasks/TaskCard/TaskCard.css
@@ -39,9 +39,94 @@
 
     .task-row-title {
         display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+
+        .task-block {
+            flex: 1;
+        }
+
+        .task-meta {
+            display: flex;
+            gap: 8px;
+
+            .team,
+            .project {
+                border: 1px solid #4B56AE;
+                padding: 2px 10px;
+                border-radius: 6px;
+                font-size: 14px;
+            }
+        }
+    }
+
+    .stage-select-row {
+        display: flex;
         gap: 16px;
-        margin-bottom: 16px;
+        margin-top: 16px;
+        align-items: center;
+    }
+
+    .stage-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         flex: 1;
+
+        .stage-name {
+            font-size: 13px;
+            color: #000;
+            margin-bottom: 4px;
+        }
+
+        .stage-line {
+            width: 100%;
+            height: 4px;
+            border-radius: 40px;
+            cursor: pointer;
+        }
+
+        .inactive .stage-name {
+            color: #DDDFE4;
+        }
+    }
+
+    .task-modal-footer {
+        display: flex;
+        justify-content: flex-end;
+        gap: 12px;
+        padding: 12px 24px;
+        position: sticky;
+        bottom: 0;
+        background: #fff;
+        z-index: 100;
+        border-top: 1px solid #f0f0f0;
+    }
+
+    .completed-label {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        .completed-text {
+            color: #6bae4b;
+            font-weight: 500;
+        }
+    }
+
+    .stage-button {
+        flex: 1;
+        text-align: center;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        cursor: pointer;
+        border-radius: 40px;
+
+
+        .stage-name {
+            font-size: 14px;
+            margin-bottom: 4px;
+        }
     }
 
     .task-col {
