--- a/front/src/Styles/components/Sections/ModalStyle.scss
+++ b/front/src/Styles/components/Sections/ModalStyle.scss
@@ -9,7 +9,7 @@
     &.ModalLeft {
       flex: 1.4;
       padding-right: 18px;
-      max-width: 320px;
+      min-width: 320px;
 
       .ListItemWithSelector {
         width: 100%;
@@ -59,4 +59,3 @@
 
   }
 }
-
