--- a/front/src/Styles/pages/EventPage.scss
+++ b/front/src/Styles/pages/EventPage.scss
@@ -41,6 +41,7 @@
 
     .FormContainer {
         box-shadow: 0px 4px 20px 0px #b2b2b240;
+        padding: 24px 32px;
         
         .RequestForm {
             max-width: 360px;
