--- a/front/src/Styles/components/Sections/SideTabs.scss
+++ b/front/src/Styles/components/Sections/SideTabs.scss
@@ -3,7 +3,7 @@
 
 .SideTabs {
     position: absolute;
-    top: 80px;
+    top: 50px;
     right: -110px;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     .SideTabItem {
         @include text2;
         background-color: $white;
-        height: 48px;
+        min-height: 48px;
         color: $black;
         padding: 8px 16px;
         border-radius: 0 $border-radius $border-radius 0;
