--- a/front/src/Components/PlanButton/PlanButton.module.scss
+++ b/front/src/Components/PlanButton/PlanButton.module.scss
@@ -3,9 +3,6 @@
     padding: 0 16px;
     font-size: 14px;
     border-radius: 6px;
-    background-color: #5C8DB9;
-    border: 1px solid #5C8DB9;
-    color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,12 +11,6 @@
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 
-    &:hover {
-        background-color: #769FC2;
-        border-color: #769FC2;
-        color: #fff;
-    }
-
     &:disabled {
         background-color: #ccc;
         border-color: #ccc;
@@ -27,9 +18,9 @@
     }
 }
 
-.primary-btn-plan {
+.blue {
     background-color: #5C8DB9;
-    border-color: #5C8DB9;
+    border: 1px solid #5C8DB9;
     color: #fff;
 
     &:hover {
@@ -38,14 +29,24 @@
     }
 }
 
-.default {
-    background-color: #F7F8FA;
-    color: #3D4452;
+.grey {
+    background-color: #DDDFE4;
+    color: #000;
+    border: 1px solid #DDDFE4;
+
+    &:hover {
+        background-color: #c8ccd4;
+        border-color: #c8ccd4;
+    }
+}
+
+.white {
+    background-color: #fff;
+    color: #000;
     border: 1px solid #D9D9D9;
 
     &:hover {
-        background-color: #5C8DB9;
-        color: #fff;
-        border-color: #5C8DB9;
+        background-color: #f2f2f2;
+        border-color: #c0c0c0;
     }
 }
