--- a/front/src/Pages/Tasks/TaskCard/TaskCard.css
+++ b/front/src/Pages/Tasks/TaskCard/TaskCard.css
@@ -77,6 +77,7 @@
             font-size: 13px;
             color: #000;
             margin-bottom: 4px;
+            cursor: pointer;
         }
 
         .stage-line {
