--- a/front/src/Styles/pages/EventPage.scss
+++ b/front/src/Styles/pages/EventPage.scss
@@ -62,6 +62,10 @@
                 @include primary-btn;
             }
         }
+
+        .MessageHeader {
+            margin-bottom: 12px;
+        }
     }
     
 }
